--- a/MCSA_anomaly_detection.ipynb
+++ b/MCSA_anomaly_detection.ipynb
@@ -70,7 +70,7 @@
         }
       ],
       "source": [
-        "folder_path = '/content'\n",
+        "folder_path = '/dataset'\n",
         "file_list = glob.glob(folder_path + \"/*.txt\")\n",
         "\n",
         "data_collected = []\n",
